check_out_2.txt
    Checking aozora_parser v0.1.0 (C:\Projects\OwnProjects\Kartana\crates\aozora_parser)
warning: unused import: `CommandToken`
 --> crates\aozora_parser\src\parser.rs:3:43
  |
3 | use crate::tokenizer::{self, AozoraToken, CommandToken, Span, TextToken};
  |                                           ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DecoratedText`
 --> crates\aozora_parser\src\linter.rs:7:21
  |
7 | use crate::parser::{DecoratedText, ParsedItem};
  |                     ^^^^^^^^^^^^^

warning: unused import: `Midashi`
 --> crates\aozora_parser\src\xhtml_generator.rs:4:28
  |
4 |     Command, CommandBegin, Midashi, MidashiSize, MidashiType, SingleCommand,
  |                            ^^^^^^^

warning: unused import: `itertools::Itertools`
 --> crates\aozora_parser\src\tokenizer.rs:3:5
  |
3 | use itertools::Itertools;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: constant `ZERO_TO_NINE` is never used
 --> crates\aozora_parser\src\tokenizer\command.rs:5:7
  |
5 | const ZERO_TO_NINE: [char; 10] = ['・・, '・・, '・・, '・・, '・・, '・・, '・・, '・・, '・・, '・・];
  |       ^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: field `css` is never read
  --> crates\aozora_parser\src\xhtml_generator.rs:16:5
   |
15 | pub struct XhtmlGenerator {
   |            -------------- field in this struct
16 |     css: String,
   |     ^^^

warning: `aozora_parser` (lib) generated 6 warnings (run `cargo fix --lib -p aozora_parser` to apply 3 suggestions)
    Checking kartana v0.1.0 (C:\Projects\OwnProjects\Kartana)
warning: unused import: `Span`
 --> src\decoration.rs:7:45
  |
7 | use aozora_parser::tokenizer::{AozoraToken, Span};
  |                                             ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Path`
 --> src\top_page\works.rs:6:12
  |
6 |     path::{Path, PathBuf},
  |            ^^^^

error[E0596]: cannot borrow `handle_save` as mutable, as it is not declared as mutable
   --> src\editor_page.rs:154:13
    |
154 |             handle_save(());
    |             ^^^^^^^^^^^ cannot borrow as mutable
    |
help: consider changing this to be mutable
    |
 36 |     let mut handle_save = move |_| {
    |         +++

For more information about this error, try `rustc --explain E0596`.
warning: `kartana` (bin "kartana") generated 2 warnings
error: could not compile `kartana` (bin "kartana") due to 1 previous error; 2 warnings emitted
